--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native-masked-view/masked-view": "*",
     "@react-navigation/native": "*",
     "@react-navigation/stack": "*",
